# ov-node

./: .env.example  .gitignore  README.md  install.sh  installer.py  main.py  openvpn-install.sh  pyproject.toml  requirements.txt
.github/workflows/: build.yml
core/: app.py  config.py  logger.py  openvpn_cli.py
core/auth/: auth.py
core/routers/: __init__.py  router.py
core/schema/: all_schemas.py
core/service/: background_tasks.py  openvpn_monitor.py  user_managment.py
core/setting/: core.py
